fix: vertical alignment in pills

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -95,7 +95,7 @@ footer {
   line-height: 1;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
+  vertical-align: middle;
   border-radius: 50rem;
 
   &:empty {
